web-infras/parser/tests/fixtures/esprima/ES2016/strict-directive/invalid-strict-function-expression-array-destructuring/output.txt
[SyntaxError]: Illegal 'use strict' directive in function with non-simple parameter list. (1,16)
1|(function([]){ "use strict"; })
 |              ^
